[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/start.png" type="Texture" id=2]
[ext_resource path="res://assets/star-pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/menu.png" type="Texture" id=4]
[ext_resource path="res://assets/modak.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/EfeitosSonoros/start-sound.ogg" type="AudioStream" id=6]

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="mainControl" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="mainControl"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 468.0
margin/top = 469.0
margin/right = 788.0
margin/bottom = 629.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureFrame" type="TextureFrame" parent="mainControl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -79.0
margin/top = -188.0
margin/right = 1841.0
margin/bottom = 892.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label" type="Label" parent="mainControl"]

rect/rotation = 90.0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1208.0
margin/top = 653.0
margin/right = 2435.0
margin/bottom = 756.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "By Miguel Alvarenga Rocha"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="starSFX" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[connection signal="pressed" from="mainControl/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


